--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:background="#0D1016"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
+    tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#ececec"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="Notification Permission"
-        android:textColor="@color/black" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/btnCheckNotificationPermission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check Notification Permission" />
-
-        <Button
-            android:id="@+id/btnAskNotificationPermission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ASK Notification Permission" />
-
-    </LinearLayout>
-
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Open NFC"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#ececec"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="Wifi NearBy Permission"
-        android:textColor="@color/black"
-        android:visibility="visible" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="visible">
-
-        <Button
-            android:id="@+id/btnCheckNearByPermission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check NearBy Permission" />
-
-        <Button
-            android:id="@+id/btnAskNearByPermission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ask NearBy Permission" />
-
-    </LinearLayout>
+        android:text="NFC Text Input"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:layout_width="300dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Open NFC is an opensource Android app for emulating an NFC tag."
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="300dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Currently only supports plain text"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="89dp"
+        android:layout_height="94dp"
+        android:layout_marginBottom="60dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/baseline_nfc_24"
+        tools:srcCompat="@drawable/baseline_nfc_24" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInput"
+        android:layout_width="301dp"
+        android:layout_height="262dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:background="#ececec"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="Storage Permission"
-        android:textColor="@color/black"
-        android:visibility="visible" />
+        android:layout_marginEnd="20dp"
+        android:background="#323232"
+        android:backgroundTint="#323232"
+        android:fontFamily="monospace"
+        android:gravity="start"
+        android:hint="Enter Text"
+        android:padding="5dp"
+        android:scrollbars="vertical"
+        android:text='   private fun setupNfcBeam() {         nfcAdapter?.setNdefPushMessageCallback({ _ ->             val text =inputText             val msg = NdefMessage(                 arrayOf(                     NdefRecord.createMime("text/plain", text.toByteArray(Charsets.UTF_8))                 )             )             msg         }, this)     }'
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@android:color/widget_edittext_dark"
+        android:typeface="monospace"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="visible">
-
-        <Button
-            android:id="@+id/btnCheckMediaPermission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check Media Permission" />
-
-        <Button
-            android:id="@+id/btnAskMediaPermission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ASK Media Permission" />
-
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
